# Bank-Alert-Reconciliation-Agent

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  main.py  mypy.ini  pyproject.toml  requirements.txt  run_checks.bat  run_server.bat  test_help_command.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
app/: main.py
app/a2a/: command_handlers.py  command_interpreter.py  router.py
app/actions/: __init__.py  automation.py  automation_router.py  config.py  connectors.py  executor.py  handler.py  models.py  router.py
app/core/: automation.py  automation_router.py  config.py  logging.py
app/db/: base.py  init.py  repository.py  retention.py  seed.py  seed_mock.py  unit_of_work.py
app/emails/: __init__.py  config.py  fetcher.py  filter.py  imap_connector.py  metrics.py  (+6 more)
config/: .env.example
docker/: Dockerfile  docker-compose.yml
docs/: BARA-Complete-Usage-Guide.md  BARA-Telex-Integration.postman_collection.json  BARA-Telex-Integration.postman_collection.json.backup  CONFIG.md  Overview.md  Roadmap.md  Stage-1-Completion.md  Stage-2-Completion.md  Stage-3-Completion.md  Stage-4-Completion.md  Stage-5-Completion.md  Stage-6-Completion.md  Stage-6.5-Completion.md  Stage-7-Completion.md  Telex-BARA-Workflow.md  Telex-Commands-Reference.md  architecture.md  specification.md  telex_workflow.json
tests/: conftest.py  seed_fixtures.py  test_a2a_jsonrpc.py  test_a2a_natural_language.py  test_command_interpreter.py  test_database.py  test_emails.py  test_health.py  test_matching.py  test_normalization.py  test_poller.py
(+47 files in other folders)
